--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
-    Fore more details:
+    For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
   -->
-  <!-- <base href="/"> -->
   <base href="/">
 
   <meta charset="UTF-8">
@@ -22,7 +24,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="admin">
+  <meta name="apple-mobile-web-app-title" content="mysite">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -30,122 +32,29 @@
 
   <title>Nahid Hasan - Software Developer</title>
   <link rel="manifest" href="manifest.json">
-  <!-- Styling for loading indicator -->
-  <style>
-    @import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);
 
-    .loading {
-      position: flex;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: #fff;
-      z-index: 9999;
-    }
-
-    .loading-text {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-      text-align: center;
-      width: 100%;
-      height: 100px;
-      line-height: 100px;
-    }
-
-    .loading-text span {
-      display: inline-block;
-      margin: 0 5px;
-      color: #000;
-      font-family: 'Quattrocento Sans', sans-serif;
-    }
-
-    .loading-text span:nth-child(1) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 0s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(2) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 0.2s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(3) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 0.4s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(4) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 0.6s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(5) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 0.8s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(6) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 1s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(7) {
-      filter: blur(0px);
-      animation: blur-text 1.5s 1.2s infinite linear alternate;
-    }
-
-    @keyframes blur-text {
-      0% {
-        filter: blur(0px);
-      }
-
-      100% {
-        filter: blur(4px);
-      }
-    }
-  </style>
-
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = "3170372819";
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 
 <body>
-  <!-- Loading Indicator -->
-  <div class="loading">
-    <div class="loading-text">
-      <span class="loading-text-words">L</span>
-      <span class="loading-text-words">O</span>
-      <span class="loading-text-words">A</span>
-      <span class="loading-text-words">D</span>
-      <span class="loading-text-words">I</span>
-      <span class="loading-text-words">N</span>
-      <span class="loading-text-words">G</span>
-    </div>
-  </div>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3546822938');
-      });
-    }
-  </script>
-  <script src="main.dart.js" type="application/javascript"></script>
-  <!-- Removes the loading indicator after 10 seconds -->
-  <script>
-    window.onload = function () {
-      setTimeout(function () {
-        var loadingIndicator = document.getElementById("loading_container");
-        if (loadingIndicator) {
-          loadingIndicator.remove();
+    window.addEventListener('load', function (ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
         }
-      }, 10000)
-    }
+      }).then(function (engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function (appRunner) {
+        return appRunner.runApp();
+      });
+    });
   </script>
 </body>
 
